# wlab_mobilestation

./: .gitignore  README.md
mobilestation/: .clang-format  CMakeLists.txt  Kconfig  README.md  pm_static.yml  prj.conf
mobilestation/boards/: nrf52840dk_nrf52840.overlay
mobilestation/boards/arm/nrf52840_nano_v2_0/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  nrf52840_nano_v2_0-pinctrl.dtsi  nrf52840_nano_v2_0.dts  nrf52840_nano_v2_0.yaml  nrf52840_nano_v2_0_defconfig
mobilestation/inc/: ble_worker.h  nvs_data.h  sample_storage.h  sim800l.h  uart_gsm.h  version.h  wlab.h
mobilestation/inc/hal/: gpio_sim800l.h  uart_gsm.h
mobilestation/inc/periphery/: adc_battery_vol.h  gpio_ext3v3.h  gpio_sim800l.h  gpio_status_led.h  gpio_user_btn.h
mobilestation/releases/: README.md  v1_ncs2_5_3.hex  v2_ncs2_7_0.hex  v3_ncs2_7_0.hex  v4_ncs2_7_0.hex  v5_ncs2_7_0.hex
mobilestation/src/: ble_worker.c  main.c  nvs_data.c  sample_storage.c  shell_commands.c  sim800l.c  uart_gsm.c  wlab.c
mobilestation/src/hal/: gpio_sim800l.c  uart_gsm.c
mobilestation/src/periphery/: adc_battery_vol.c  gpio_ext3v3.c  gpio_sim800l.c  gpio_status_led.c  gpio_user_btn.c  uart_gsm.c
scripts/: mqtt.py  mqttpacket.py  sim800l.py  wlab_bin2json.py
scripts/wlab_auth/: config_template.json  wlab_auth.py
scripts/wlab_dashboard/: main.py
